Add automatic wait+retry if Github data isn't ready.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,9 +4,10 @@
 
 .messages {
     width: 50%;
-    height: 100px;
+    height: 200px;
     border: 1px solid lightgrey;
     margin: 5px;
+    padding: 40px;
 }
 
 .container {
