--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+.coder {
+    padding: 1em;
+}
+
 .messages {
     width: 50%;
     height: 200px;
@@ -16,4 +20,22 @@
 .container {
     width: 60%;
     margin: 50px auto;
+}
+
+@media screen and (min-width: 450px) {
+    .coder {
+        height: 400px;
+        width: 50%;
+        float: left;
+        font-size: 0.7em;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .coder {
+        height: 650px;
+        width: 33%;
+        float: left;
+        font-size: 1em;
+    }
 }
